--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,11 @@
             <version>4.1.34.Final</version>
         </dependency>
         <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.5</version>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.56</version>
         </dependency>
+
     </dependencies>
     <build>
         <finalName>huya-danmu</finalName>
